test: add full integration tests for reservations with seeded data and security roles